[WPE][GStreamer] media playback broken https://bugs.webkit.org/show_bug.cgi?id=238110

Patch by Zan Dobersek <zdobersek@igalia.com> on 2022-03-20
Reviewed by Philippe Normand.

* platform/graphics/gbm/GBMBufferSwapchain.cpp:
(WebCore::GBMBufferSwapchain::GBMBufferSwapchain):
Fix the assert that's hit when using eight-buffers capacity value. Just
a matter of using the more proper <= operator.


Canonical link: https://commits.webkit.org/248647@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291541 268f45cc-cd09-0410-ab3c-d52691b4dbfc